refactor: 영상 추출시 유저의 설정 언어에 따라 응답값 수정